# gnome-themes

./: PROJECT_SPEC.md  README.md  dev.md  meson.build  setup_deps.sh
include/: backup.h  errors.h  gnome_config.h  keybindings.h  tui.h
src/: backup.c  gnome_config.c  keybindings.c  main.c  tui.c
tests/: test_manager.c
